# agentic_ai

./: .gitignore  README.md  requirements.txt  setup_system.sh
ARCHITECTURE/: physics_sim.drawio
physic_sim/: CMakeLists.txt  app.py  cli_agent.py  memory.md
physic_sim/include/: animation.hpp  plots.hpp
physic_sim/src/: animation.cpp  main.cpp  plots.cpp
physic_sim/static/: main.js  style.css
physic_sim/templates/: index.html
